Revamp of repo for public release

--- a/Dawn of Dominion/Options.resx
+++ b/Dawn of Dominion/Options.resx
@@ -128,7 +128,6 @@ Mr. Hudson
 
 Developed by Mingde Yin
 All code and art 100% original
-Music from Cloud Imperium Games, Riot Games
 
 Special Thanks:
 Beta Testing - Kevin Gu, Willard Ma, Patrick Wang,  Kevin Zhao 
@@ -137,8 +136,8 @@ Design Inspiration: Battleship, Civilization
 
 Asset Inspiration: Kevin Zhao (early sprite designs), Spiral Knights, League of Legends
 
-Build: 1.0 Release Candidate 3 (FINAL - HOTFIX)
-2017/06/12</value>
+Build: 1.1 Compactified
+2020/06/06</value>
   </data>
   <metadata name="tmrFade.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>167, 17</value>
